# Xythrion-legacy

./: .coveragerc  .dockerignore  .env-example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIG.md  Dockerfile  HELP.md  LICENSE  Pipfile  README.md  SETUP.md  TODO  TODO.md  TODO.txt  Xiux.code-workspace  authorship.py  bot.py  bot_test.py  codelab.txt  default-config.toml  demonically-workspace.code-workspace  docker-compose.yml  exampleGUI.py  google-formating.py  google-formatting.py  launch.sh  main.py  misc.txt  old.py  old_bot.py  oldbot.py  passion.py  pyproject.toml  rehasher.code-workspace  relay-workspace.code-workspace  requirements.txt  (+11 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql-analysis.yml  greetings.yml  linting.yml
ARi0/configuration/: config.json
ARi0/containers/: __init__.py
Intro_to_Machine_Learning_and_NLTK/: core.py  evolution.py  formspring_data.csv  overview.txt  pathing.py
SoftBot/: __init__.py
SoftBot/configuration/: blocked_cogs.txt
being-built/: sourcing.py
being_built/authorities/: builder.py  reporting.py
being_built/detectors/: spotify.py
being_built/directives/: leveling.py
being_built/requesters/: ETG.py  (+8 more)
cogs/: directives.py  examples.py  google.py  graphing.py  guidance.py  identity.py  info.py  meme.py  memes.py  memos.py  messages.py  misc.py  modification.py  passwords.py  playback.py  re_template.py  reporting.py  stocks.py  template.py  translation.py  tts.py  warnings.py  weather.py
config/: config.json.txt  config.txt  config_connections.json  urls.json
configuration/: google_service_token.json
core/: __init__.py  startup.py
credentials/: DSbot.json  DStoken.txt  README.md  config.ini
currentlyTesting/: newThings.py
data_dump/: weather.json
depricated/: IO.py  TTS.py  spotify.py  updates.py
docs/: index.html  script.js
documentation/: reddit.md  weather.md
essentials/: __init__.py  colors.py  converter.py  errors.py  pathing.py  spare_logger.py  welcome.py
examples/: hatch.py  owner.py  passion.py  simple.py
fonts/: title.txt
internals/: __init__.py
learning_sockets/: client.py  server.py
legacy/: bot.py  file_check.py  new_dir.py  welcome_prompt.py
logs/: .gitignore
markdown-mathematics/: identities.md  test.md
modules/: __init__.py  colors.py  conversion.py  graphing.py  output.py  parsers.py  shortcuts.py  utilities.py
new_bot/: bot_example.py  members.py
old/: TODO.txt  _error_prompt.py  _input_loop.py  _path.py  google.py  weather.py
oldcogs/: examples.py  guidance.py  identity.py  memos.py  passwords.py  playback.py  stocks.py  tts.py  warnings.py
postgres/: init.sql
rehasher/: __init__.py
scraping/: converter.py  yahoo_finance.py
scripts/: launch.sh  pipenv.sh  quick_launch.sh  update.sh
snipped/: __init__.py
template/: _extension.py
test/: 5_client.py  5_server.py  better_server.py  client.py  db_bot.py  matplotlib_examples.py  matplotlib_test.py  regex_test.py  server.py  sympy_test.py  test.py  testcog.py
utils/: __init__.py  markdown.py  parsing.py  plotting.py  restricting.py  shortcuts.py  status.py
webserver/: Cargo.toml  Dockerfile  README.md
webserver/src/: main.rs
xythrion/: Dockerfile  __init__.py  __main__.py  bot.py  constants.py  context.py  databasing.py  default-config.toml  prediction.py  pyproject.toml
xythrion/bot/: __init__.py  __main__.py  bot.py  context.py
xythrion/bot/extensions/: __init__.py
xythrion/bot/extensions/administration/: __init__.py  development.py  warnings.py
xythrion/bot/extensions/meta/: __init__.py  links.py
xythrion/bot/utils/: __init__.py  converters.py  formatting.py
xythrion/extensions/: __init__.py
xythrion/extensions/administration/: __init__.py  anti_command_spam.py  api_manager.py  development.py  manager.py  moderation.py  warnings.py
xythrion/extensions/game_data/: __init__.py  factorio.py  warframe.py
xythrion/extensions/generation/: QR.py  __init__.py  fractals.py  graphing.py  math.py  plotting.py  qrcode.py  randoms.py  vectorization.py
xythrion/extensions/meta/: __init__.py  dates.py  guilds.py  help.py  links.py  notes.py  snippets.py  source.py
xythrion/extensions/moderation/: warnings.py
xythrion/extensions/requesters/: __init__.py  api_usage.py  cats.py  documentation.py  reddit.py  tinyy.py  tts.py  weather.py
xythrion/resources/: randoms.json
xythrion/resources/markdown-mathematics/: resources.txt
xythrion/resources/markdown-mathematics/identities/: eqs.md  eqs.tex.md
xythrion/utils/: __init__.py  conversion.py  converters.py  expressions.py  formatting.py  graphs.py  markdown.py  pagination.py  plotting.py  shortcuts.py  tokenizer.py  unit_conversion.py  wrappers.py
xythrion/utils/DSL/: errors.py  interpreter.py  tokenizer.py
xythrion/utils/lexer/: __init__.py  tokenizer.py
(+195 files in other folders)
