[project]
name = "Xythrion"
version = "2.0"
description = "Graphing manipulated data through discord.py"
authors = [
    "Xithrius <xithrius@gmail.com>"
]
license = "MIT"
readme = "README.md"
python = "^3.8"
homepage = "https://github.com/Xithrius/Xythrion"
repository = "https://github.com/Xithrius/Xythrion"
documentation = "https://github.com/Xithrius/Xythrion/README.md"

[tool.black]
line-length = 110
target_version = ['py38']
