[package]
name = "xythrion-webserver"
version = "0.1.0"
edition = "2021"
authors = ["Xithrius <xithrius@gmail.com>"]
description = "Webserver for parsing and processing math expressions for plots"
documentation = "https://github.com/Xithrius/Xythrion/webserver"
homepage = "https://github.com/Xithrius/Xythrion/webserver"
repository = "https://github.com/Xithrius/Xythrion/webserver"
license = "MIT OR Apache-2.0"

[dependencies]
actix-web = {version = "4.0.0-beta.20", features = ["openssl"]}
toml = "0.5.8"
serde = { version = "1.0.132", features = ["derive"] }
anyhow = "1.0.52"
tokio = { version = "1.17.0", features = ["full"] }
serde_json = "1.0.79"
json = "0.12.4"
log = "0.4.14"


[[bin]]
bench = false
path = "src/main.rs"
name = "xythrion-webserver"
