[package]
name = "xythrion-webserver"
version = "0.1.0"
edition = "2021"
authors = ["Xithrius <xithrius@gmail.com>"]
description = "Webserver for parsing and processing math expressions for plots"
documentation = "https://github.com/Xithrius/Xythrion/webserver"
homepage = "https://github.com/Xithrius/Xythrion/webserver"
repository = "https://github.com/Xithrius/Xythrion/webserver"
license = "MIT OR Apache-2.0"

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0.132", features = ["derive"] }

[[bin]]
bench = false
path = "src/main.rs"
name = "xythrion-webserver"
