[[source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.poetry]
name = "Xythrion"
version = "0.0.1"
description = "Graphing manipulated data on Discord."
license = "MIT"
authors = ["Xithrius <xithrius@gmail.com>"]

[tool.poetry.dependencies]
python = "~=3.9.6"
disnake = "~=2.4.0"
humanize = "~=4.0.0"
loguru = "~=0.6.0"
aiohttp = "~=3.8.1"
toml = "~=0.10.2"

[tool.poetry.dev-dependencies]
flake8 = "~=4.0.1"
flake8-annotations = "~=2.7.0"
flake8-bugbear = "~=22.1.11"
flake8-docstrings = "~=1.6.0"
flake8-import-order = "~=0.18.1"
flake8-string-format = "~=0.3.0"
flake8-tidy-imports = "~=4.6.0"
flake8-todo = "~=0.7"
pep8-naming = "~=0.12.1"
pre-commit = "~=2.18.1"
python-dotenv = "~=0.19.2"
taskipy = "~=1.10.1"

[tool.taskipy.tasks]
start = "python -m bot"
lint = "pre-commit run --all-files"
precommit = "pre-commit install"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
